k8s/cluster_policy/deny-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: no-latest-tag
spec:
  validationFailureAction: enforce
  rules:
    - name: deny-latest-tag
      match:
        resources:
          kinds:
            - Deployment
      validate:
        message: "Using image tag 'latest' is not allowed for security reasons."
        anyPattern:
          # Case 1: initContainers not present
          - spec:
              template:
                spec:
                  containers:
                    - image: "!*:latest"
          # Case 2: initContainers present and no latest tags in containers or initContainers
          - spec:
              template:
                spec:
                  containers:
                    - image: "!*:latest"
                  initContainers:
                    - image: "!*:latest"
