k8s/cluster_policy/deny-zero-replica.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-zero-replica
spec:
  rules:
    - name: deny-zero-replica-missing
      match:
        resources:
          kinds:
            - Deployment
      validate:
        message: "Replicas field must be specified and cannot be zero"
        anyPattern:
          - spec:
              replicas: ">0"
          - spec:
              replicas: ">=1"
