k8s/cluster_policy/policy5.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: no-latest-tag
spec:
  validationFailureAction: enforce
  rules:
    - name: validate-no-latest-tag
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Using image tag 'latest' is not allowed for security reasons."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
