k8s/cluster_policy/policy6.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-imagepullpolicy-always
spec:
  validationFailureAction: enforce
  rules:
    - name: check-imagepullpolicy
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "imagePullPolicy must be Always."
        pattern:
          spec:
            containers:
              - imagePullPolicy: Always
