k8s/cluster_policy/require-imagepullpolicy-always.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-imagepullpolicy-always
spec:
  validationFailureAction: enforce
  rules:
    - name: check-imagepullpolicy
      match:
        resources:
          kinds:
            - Deployment
      validate:
        message: "All containers must have imagePullPolicy set to Always."
        pattern:
          spec:
            template:
              spec:
                containers:
                - name: "*"
                  imagePullPolicy: "Always"
