k8s/cluster_policy/require-resource-requests-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resource-requests-limits
spec:
  validationFailureAction: enforce
  rules:
    - name: validate-resources
      match:
        resources:
          kinds:
            - Deployment
      validate:
        message: "CPU and memory resource requests and limits must be specified for all containers."
        pattern:
          spec:
            template:
              spec:
                containers:
                - name: "*"
                  resources:
                    requests:
                      cpu: "?*"
                      memory: "?*"
                    limits:
                      cpu: "?*"
                      memory: "?*"
