k8s/cluster_policy/restrict-root-and-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-privileged-root-containers
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: deny-privileged-or-root-any-container
      match:
        resources:
          kinds:
            - Deployment
      validate:
        message: >-
          Containers must NOT be privileged, run as root (runAsUser=0), allow privilege escalation,
          or have runAsNonRoot=false or missing.
        pattern:
          spec:
            template:
              spec:
                containers:
                - name: "*"
                  securityContext:
                    runAsNonRoot: true
                    allowPrivilegeEscalation: false
                    privileged: "!true"
